<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleTextView"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:id="@+id/titleText"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/listAddEditText"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_alignParentStart="true"
        android:hint="@string/new_activity_EditText"
        android:textAlignment="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addButton"
        android:id="@+id/addButton"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:onClick="addButtonClick"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ListView2"
        android:layout_weight="5"
        android:background="@drawable/bg_key"></ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/long_click_textview"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_list_button"
        android:layout_gravity="center"
        android:onClick="saveListButtonClick"
        android:id="@+id/saveListButton"/>
</LinearLayout>
