<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kimschuiten.to_do_list.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_do_title"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_gravity="center"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ListView1"
        android:layout_weight="5"></ListView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_list_title_edittext"
        android:id="@+id/newListEdText"
        android:layout_below="@id/ListView1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_list_button"
        android:onClick="createNewList"
        android:id="@+id/newListButton"
        android:layout_toRightOf="@id/newListEdText"/>
    </RelativeLayout>


</LinearLayout>
